added get_chats endpoint
