# api_gateway/docs/swagger.json
@@ -183,6 +183,26 @@
                 "responses": {}
             }
         },
+        "/chat/get_chats": {
+            "get": {
+                "security": [
+                    {
+                        "Token": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "получение списка чатов",
+                "responses": {}
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Публичный запрос, который клиент отправляет при запуске. Возвращает статус сервисов.",
